syntax = "proto3";

package telemetry.v1;

option go_package = "github.com/NordSecurity/nordvpn-linux/daemon/pb/telemetry/v1;telemetrypb";

message DesktopEnvironmentRequest {
  string desktop_env_name = 1;  // Desktop environment name (e.g. "gnome")
}

// Defines supported display protocols
enum DisplayProtocol {
  DISPLAY_PROTOCOL_UNSPECIFIED = 0;  // Default unset value
  DISPLAY_PROTOCOL_UNKNOWN = 1;      // Unknown or unrecognized protocol
  DISPLAY_PROTOCOL_X11 = 2;          // X11 windowing system
  DISPLAY_PROTOCOL_WAYLAND = 3;      // Wayland display server protocol
}

message DisplayProtocolRequest {
  DisplayProtocol protocol = 1;  // Active display protocol
}

message CustomEntry {
  string label = 1;  // Identifier for the telemetry field
  string value = 2;  // Value associated with the field
}
